<resources>
    <string name="app_name">Parki</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hint_email">Email</string>
    <string name="agree">agree</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="success">1</string>
    <string name="internet_connection">Internet Connection Error</string>
    <string name="full_name">Full Name</string>
    <string name="hint_Phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="account_details">Account Details</string>
    <string name="next">Next</string>
    <string name="title_activity_sign_up_car_details">Signup</string>
    <string name="car_details">Car Details</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="CarBrand">Car Brand</string>
    <string name="if_you_don_t_have_account">If you don\'t have account !</string>
    <string name="sign_up">Signup</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_seeker_maps">Map</string>
    <string name="where">Where …</string>
    <string name="please_grant_permissions">please_grant_permissions</string>
    <string name="permissions_needed">permissions_needed</string>
    <string name="book">BOOK</string>
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="change_password">Change Password</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="saved_places">Saved Places</string>
    <string name="help_and_support">Help and Support</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="wallet_and_payment">Wallet and Payment</string>
    <string name="car">Car</string>
    <string name="Cancel">Cancel</string>
    <string name="your_instant_parking_helper">Your instant parking helper</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_number">Car Number</string>
    <string name="car_color">Car Color</string>
    <string name="car_image">Car Image</string>
    <string name="select_your_car_image">Select your car image</string>
    <string name="browse">Browse</string>
    <string name="payment">Payment</string>
    <string name="connect_your_paypal_account">Connect your Paypal Account</string>
    <string name="accept_all_the">Accept all the</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="send_to">Send To</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_help_you_in_parking">Let\'s help you in Parking</string>
    <string name="seek_parking">Seek Parking</string>
    <string name="looking_for_place_to_park_n_your_car_right_away">Looking for place to park \n  your car right away</string>
    <string name="or">OR</string>
    <string name="leave_parking">Leave Parking</string>
    <string name="earn_money_by_exchange_your_parking_place">Earn money by exchange \n your parking place</string>
    <string name="confirm">Confirm</string>
    <string name="history">History</string>
    <string name="navigate">Navigate</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="tap_to_change">tap to change</string>
    <string name="available_now">Available Now</string>
    <string name="_5k_range">5k Range</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_day">1 day</string>
    <string name="apply">Apply</string>
    <string name="available_later">Available Later</string>
    <string name="range">Range</string>
    <string name="_1k">1K</string>
    <string name="_90k">90K</string>
    <string name="unfortunately_there_is_no_parking_lots_available_in_this_area_right_now">Unfortunately, There is no parking lots available in this area right now.</string>
    <string name="title_activity_confirm_request">ConfirmRequestActivity</string>
    <string name="no_account_assigned_yet">no account assigned yet</string>
    <string name="awesome">AWESOME</string>
    <string name="successfully_parked">Successfully Parked</string>
    <string name="a_full_receipt_has_been_sent_to_your_email">A full receipt has been sent to your email</string>
    <string name="show_the_full_receipt">Show the full receipt</string>
    <string name="back_to_home">Back to home</string>
    <string name="exchanged_parking_with_s">Exchanged parking with %s</string>
    <string name="title_activity_cancel_request">CancelRequestActivity</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_re_about_to_cancel">You\'re about to cancel, \n once you confirm you will not be able to \n continue same parking lot?</string>
    <string name="back_to_parking">Back to Parking</string>
    <string name="confirm_cancel">Confirm Cancel</string>
    <string name="car_model">Car Model</string>
    <string name="leave_now">Leave Now</string>
    <string name="later">Later</string>
    <string name="your_location">Your Location</string>
    <string name="set_your_price">Set Your Price</string>
    <string name="parking_exchange_fee">Parking Exchange Fee</string>
    <string name="start_leaving">Start Leaving</string>
    <string name="leaving_time">Leaving Time</string>
    <string name="title_activity_waiting_seeker">WaitingSeekerActivity</string>
    <string name="waiting_a_parking_seeker">Waiting a Parking Seeker !</string>
    <string name="required">this field is reqired</string>
    <string name="seeking">seeking</string>
    <string name="leaving">leaving</string>
    <string name="gps_network_not_enabled">gps network not enabled</string>
    <string name="get_start">Get Start</string>
    <string name="payed_with">Paid with</string>
    <string name="full_receipt_was_sent_to_your_registered_email">Full Receipt was sent to your registered email</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit">Credit</string>
    <string name="use_credit_first">Use credit first</string>
    <string name="are_you_sure_to_cancel">Are You Sure Cancel This Parking</string>
</resources>
