<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:paddingStart="@dimen/_14sdp"
        tools:context=".activities.Account.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/logo_white"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/your_instant_parking_helper"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/hint_email"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/background_edt_login_border"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/hint_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_edt_login_border"
            android:inputType="textPassword"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:buttonTint="@color/colorWhite"
                android:text="@string/remember_me"
                android:textColor="@color/colorWhite"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLoginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_btn_blue"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/if_you_don_t_have_account"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/background_btn_white"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</ScrollView>