<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:scrollbars="none"
    tools:context=".activities.Account.SignUpCarDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/logo_login"
            tools:ignore="ContentDescription" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/car_details"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/car_brand"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/edtResdfgisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_edt_border"
            android:drawableEnd="@drawable/btn_dropdown"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/car_model"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/edtRegismterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_edt_border"
            android:drawableEnd="@drawable/btn_dropdown"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/car_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtReginjhbsterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_edt_border"
            android:inputType="text"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/car_color"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/background_edt_border"
            android:inputType="text"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/car_image"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/logo_login" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="2"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_your_car_image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_edt_login_border"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/browse" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/payment"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/connect_your_paypal_account"
            android:textSize="@dimen/_16sdp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_edt_login_border"
            android:drawablePadding="@dimen/_7sdp"
            android:drawableStart="@drawable/visa"
            android:padding="@dimen/_7sdp"
            android:text="@string/connect_your_paypal_account"
            android:textSize="@dimen/_16sdp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_all_the" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textStyle="italic|bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegisterNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_btn_border"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</ScrollView>