<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/_20sdp"

    tools:context=".activities.Seeker.CancelRequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/are_you_sure"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18sdp"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/you_re_about_to_cancel"
            android:layout_gravity="center"
            android:textColor="@color/colorSecondTextColor"
            android:textSize="@dimen/_12sdp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancelRequestBackToParking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/background_btn_blue"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/back_to_parking"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/btnCancelRequestConfirmCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_btn_cancel"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/confirm_cancel"
            android:textColor="@color/colorCancelTextColor" />
    </LinearLayout>
</RelativeLayout>